[package]
version = "1.1.1-alpha.0"
name = "srvzio"
description = "An helpful crate to implement services"

authors = ["Ivan De Marino <detronizator@gmail.com>"]

documentation = "https://docs.rs/crate/srvzio"
repository = "https://github.com/detro/srvzio"
license = "BSD-3-Clause"

readme = "README.md"
edition = "2018"

exclude = [
    ".travis.yml",
    ".gitignore",
]

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "detro/srvzio", branch = "master" }

[dependencies]
ctrlc = { version = "3.1.2", features = ["termination"] }
crossbeam-channel = "0.3.8"
log = "0.4.6"

[profile.release]
lto = true
incremental = true
opt-level = 3
